@@ -111,8 +111,17 @@ import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
+import java.security.KeyStore;
+import java.security.cert.X509Certificate;
+import java.util.Base64;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
+import javax.net.ssl.KeyManagerFactory;
+import javax.net.ssl.SSLContext;
+import javax.net.ssl.SSLServerSocket;
+import javax.net.ssl.SSLSocket;
+import javax.net.ssl.TrustManager;
+import javax.net.ssl.X509TrustManager;
 
 public class AsyncCloseProbe {
 
@@ -241,15 +250,55 @@ public class AsyncCloseProbe {
             // ~4 s and the run exits 1. A harness whose failure path has never
             // been executed is not known to have one.
             String skip = System.getProperty("probe.skipClose", "");
+            // BOUNDED, and on its own daemon thread (W7-61). The close used to
+            // run inline, which silently assumed `close()` returns. It does not
+            // always: measured on HotSpot 25.0.3 / Windows 11 2026-08-12,
+            // `SSLSocket.close()` called while another thread is parked inside
+            // `SSLSocket.getOutputStream().write()` BLOCKS — JSSE serialises
+            // `duplexCloseOutput()` against the write it would have to
+            // interrupt — so an inline close turned this probe into the hang it
+            // measures. The 13 pre-existing rows are unaffected: their closers
+            // return immediately, so the thread hop costs nothing and the
+            // timings are unchanged.
+            Thread closerThread = null;
             if (!skip.equals("*") && !skip.equals(name)) {
-                closer.close();
+                closerThread = new Thread(() -> {
+                    try {
+                        closer.close();
+                    } catch (Throwable ignored) {
+                        // A close that throws is still a close.
+                    }
+                }, "asyncclose-closer-" + name);
+                closerThread.setDaemon(true);
+                closerThread.start();
             }
             worker.join(WAKE_MS);
             ms = (System.nanoTime() - t0) / 1_000_000L;
 
             if (worker.isAlive()) {
-                // The defect. Do not wait again, do not retry — the worker is
-                // a daemon and `System.exit` below will leave without it.
+                // Distinguish "the wakeup never arrived" from "the close itself
+                // never ran". They look identical from the worker's side and
+                // mean opposite things: the first is the defect this file is
+                // about; the second means the row never delivered its stimulus,
+                // so it tested nothing and must not be scored as a failure of
+                // the VM under test. Do not wait again, do not retry — every
+                // thread here is a daemon and `System.exit` below leaves
+                // without them.
+                if (closerThread != null && closerThread.isAlive()) {
+                    // A row whose `want` lists CLOSE_BLOCKED is asserting that
+                    // this IS the reference behaviour — see `tlsWrite`, where
+                    // HotSpot 25 measurably serialises `close()` behind a
+                    // parked TLS write. Anywhere else it means the stimulus was
+                    // never delivered, so the row tested nothing.
+                    if (matches(want, "CLOSE_BLOCKED")) {
+                        report(name, true, ms, "CLOSE_BLOCKED", want, "PASS");
+                        passed++;
+                        return;
+                    }
+                    report(name, true, ms, "CLOSE_BLOCKED", want, "INCONCLUSIVE");
+                    inconclusive++;
+                    return;
+                }
                 report(name, true, ms, "TIMEOUT", want, "FAIL");
                 failed++;
                 return;
@@ -268,10 +317,23 @@ public class AsyncCloseProbe {
             // Every row cleans up whether it passed, failed or expired. An
             // expired row that left a listener bound would contaminate every
             // later row on this port.
+            // Bounded for the same reason the close is (W7-61): a cleanup
+            // that closes a TLS socket a worker is still parked in a write on
+            // can itself block, and an unbounded cleanup in a `finally` is a
+            // hang no verdict can be printed past.
+            Thread cleanupThread = new Thread(() -> {
+                try {
+                    cleanup.close();
+                } catch (Throwable ignored) {
+                    // best effort
+                }
+            }, "asyncclose-cleanup-" + name);
+            cleanupThread.setDaemon(true);
+            cleanupThread.start();
             try {
-                cleanup.close();
-            } catch (Throwable ignored) {
-                // best effort
+                cleanupThread.join(WAKE_MS);
+            } catch (InterruptedException ignored) {
+                Thread.currentThread().interrupt();
             }
         }
     }
@@ -759,6 +821,329 @@ public class AsyncCloseProbe {
                 p::close);
     }
 
+    // =======================================================================
+    // TLS rows (W7-61)
+    // =======================================================================
+    //
+    // W7-53 fixed 19 blocking sites with one loop — park in `poll` on a bounded
+    // slice, re-ask the registry AFTER the poll, return `Interrupted` once the
+    // slot is gone — and deliberately left FOUR TLS sites alone, because a
+    // close-aware loop must not abandon a read MID-RECORD. TLS is framed: a
+    // reader that returns between two of the `recv`s that make up one record
+    // hands its caller a fragment and desynchronises the stream for good, which
+    // is worse than the hang it fixes.
+    //
+    // The four sites are `servlet.rs::s2_tls_read_direct` / `s2_tls_write`
+    // (native-tls) and `t27_tls.rs::rustls_stream_read` / `rustls_stream_write`
+    // (rustls). All four share one shape: they clone an `Arc` on the stream out
+    // of a registry, release the registry lock, and block. `close()` removes
+    // the registry entry and `try_lock`s the stream — which a parked reader
+    // holds — so nothing closes the socket and nothing wakes the reader.
+    //
+    // These rows measure exactly that, and NOT more than that. What they cannot
+    // measure, said here so nobody reads a green as more than it is:
+    //
+    //   * They do not prove a record arrived WHOLE. Asserting that a TLS read
+    //     returned something is not a test that it returned a complete record —
+    //     that is the vacuous shape this family is prone to. `tlsReadIntegrity`
+    //     below is the row that does test it, by comparing the exact bytes of a
+    //     multi-record payload, and it is the row that would go red if a future
+    //     close-aware loop were bolted on at the wrong level.
+    //   * On Windows they exercise only half the fix. Winsock has no `shutdown`
+    //     that aborts a pending blocking call, so a reader ALREADY parked
+    //     cannot be woken at all; `tlsRead` is expected to report TIMEOUT on
+    //     Windows CratonVM and that is the row W7-61 leaves open, not a
+    //     surprise. On Unix `shutdown(SHUT_RDWR)` on the registry-held
+    //     duplicate ends the byte stream and the reader returns.
+
+    /** A self-signed PKCS12 (CN=localhost, SAN dns:localhost + ip:127.0.0.1,
+     *  RSA 2048, 36500 days) generated with JDK 25's own `keytool` on
+     *  2026-08-12. Embedded rather than generated at runtime on purpose: making
+     *  a certificate at runtime needs `sun.security.x509` internals, and a
+     *  probe that needs `--add-exports` is a probe that gets skipped. The
+     *  password is `probepass` for both store and key; it protects nothing. */
+    static final String PROBE_P12_BASE64 =
+            "MIIKcgIBAzCCChwGCSqGSIb3DQEHAaCCCg0EggoJMIIKBTCCBawGCSqGSIb3DQEHAaCCBZ0EggWZ" +
+            "MIIFlTCCBZEGCyqGSIb3DQEMCgECoIIFQDCCBTwwZgYJKoZIhvcNAQUNMFkwOAYJKoZIhvcNAQUM" +
+            "MCsEFFW6SVT5Y6wROnXE2QeEU+MuObqvAgInEAIBIDAMBggqhkiG9w0CCQUAMB0GCWCGSAFlAwQB" +
+            "KgQQ6T6pQ0YdKhQyuDH1/SxTVwSCBNB3dZtxkUy89HHK86TN0GxSMDQJMG+OptOYP4KdZG/7IDCL" +
+            "AEVJ7wdPby70AwO4eKoNT5rI3xvozUC1HQRCZ0Xw4FWOzAQhP64Q/8ZdYlOa1afkFu38PkY7ivbR" +
+            "szq7MG1nhpX1w6Yo6ypaHbpROlTZZoG2w86SKfhe1cASpSSPYAvR5LTzNTY7bYX1cxufJGG5YNyu" +
+            "hwyYVuUlqlVioYVaDo+lXIhoDp7WI7+dUnrSwxMn8MQzCNgQm+Ok+nTK+LGIUhwE0T4aJqrsRM57" +
+            "qNXSDMJK+0N0A4Ye/zr8w8EoRtF5opC1eRxj9btkeDjDybruGxazRV1GXcVsBvc0OURACU6bcQvj" +
+            "rElFeRN7zS+++Zi97ZMigBn4kamML5VRrq2ldaXozJah5oGe8tQki+fhtfqxSb9FQC/1wCYroNWR" +
+            "UXV5WAACcPp0PS45R5u+6Ip4rt6dKTWxNfvK/8jrVw9qo7aFVIU8gAtklEUURNF7LWjOdT9bMKQ/" +
+            "bXxXx6OcY41EghoNjKza9SuCff6birmKgEVIo/iOyQxq7TM2zvy3hEShemh14KTKUsEzelg738Tt" +
+            "H69RAZPK7GGb/O6EXOrxsrjdFWX8pkvpJTOO3Ut3aWuRsgosvL2vALAGfKxs2EXbqWCFYrVpPQAa" +
+            "HXVnTm5ArsmTccqCpyxdKdBX/4DlJObk90jAbqScZkUZ4qZryG9j5ZyjHvxaHVs9dx3EL9y14CQe" +
+            "vVPxtR4p+ZLRbF26DETh5FL6TVS1ylQkhN+PSqyQm1JheLQT0+nsRLAK0fZUyvugCMvFt7OJ45v3" +
+            "f0cAgto2JIiKz+Wa68J8vE9Y5sKzilm8Lm3bSAuXOrCjkY/aGP0NA9DsYPf8SI2gEDGOl3RmR042" +
+            "iosjsWc/Qs2W6LOCTs9ALMIh0rxsH3nNez1WNv9KZZguQGleSID+40fBCGO9KjEOF1MhZRE1BZ8y" +
+            "wQpdPrmUl3By2nffrSddbTvpP9GnCPRKo1XFI4eV0OmRIgx8UmHg3+YZXa+HTx5TxBZNO0/DgiQp" +
+            "SfbCBUWdTa29f3xU8rPWrq5nKv3DHL/1FDVFIqrrssZbDJpQ6F0J/7EHMVqexA9u0vH8VhWu4TrY" +
+            "WLWr9JL6rSll7CHfWNBcWa3b7ZrNVD2MPOsSd0GmgDkF4tlWZkWCKeePw8L7mKvZ2b+wbl+w2HqG" +
+            "Ok+aXydKfUyGp7wsjxuy9EGIsNfEO+EKkUmiST8TXd/mEKhfNgOTCbCGhbUQ6/ualFFT8q8UskSZ" +
+            "zMZPjzPEHrEOnKMx1wkRfo2f1y8WdE8R+43w2EXSYqA22GYN1qrXLY/h0JTeBbA5gNjurlKfSSr1" +
+            "j3077e+FSxbuZV6IsbtuUDgBt9kRqaWG8ZckIcJL8vt5MCTDG+qSUDJPTYELugPb7CQBnXktKfGy" +
+            "RFUL+BCwg/KkxwWViv57wvkwnRZ/7MsrgAdnw6RZ2AFHqV9iwq5HK0BkYfyXgYHnZPNGqTxHN6lB" +
+            "kGfOfiy8lD03YFQBMEbFJQ7YWGEgCyJbEZnfDYsFF4IRwn7aMSuTNUAJn774F35UuqKAOV5NfMVa" +
+            "AavHOCqmMQjiMe+AwgUij25dBLdnVVCyI1sbZzHkJbYIwZBOkzmNBYhpxHRX4+PTTTDrvEG6rqb9" +
+            "wTE+MBkGCSqGSIb3DQEJFDEMHgoAcAByAG8AYgBlMCEGCSqGSIb3DQEJFTEUBBJUaW1lIDE3ODY1" +
+            "MTgwMDE0MzUwggRRBgkqhkiG9w0BBwagggRCMIIEPgIBADCCBDcGCSqGSIb3DQEHATBmBgkqhkiG" +
+            "9w0BBQ0wWTA4BgkqhkiG9w0BBQwwKwQUsJOcPrutcY9/BVVCi6GJRdY4WNICAicQAgEgMAwGCCqG" +
+            "SIb3DQIJBQAwHQYJYIZIAWUDBAEqBBA/UUhlF0RtElz39q55/qWjgIIDwA61UQu+PPa9QFnciYDV" +
+            "93bTLEyxPDvhMrYgBNXUY/A/DkVyWhkwO2GR01YzWPv0FkS2E+bMc5wuoviYCTEDmYrddnoWSKfT" +
+            "tl4pmN3S6zGte8hXtn4PME7anvxpN1gchnT8Kw01MsRnk8uC865j6MeMCxL/LgefSYGQ3b1QVFWH" +
+            "zks3ILtzm0wSV90EpfpC2QiV9aH2MXjEbEwO34SfDMKvEFR+WBGYflPw6Qwf4D0jnvACJXGZL806" +
+            "62sRY++p4asG9jHn3P0Skg/SeQn0rmUpSGkxR3w0eWyYeN3ODvFcutjkWj/RXGZyKo19JWbNNM3+" +
+            "WEA+dfVJ7olbJbpfroRo7Dbs7N4javHihogW80SA8cH5hFjQcxLA+FawMdguoiK4YLjNuq0ZdKdF" +
+            "XMSADVF7RFad/NjS1wnA330DFtsOvs+V27MBoACCA7PBlQmweIC+a2ZdYixZuY4RhGmWKlSqo/Ad" +
+            "zBC5DRW37xvFHOKk+Hu6OM6PTW2ZWBuVKYJ3lBw8AWfx3eH7D8HR5xVBqIMSut9DC30MmMBIIria" +
+            "49U6B0C2JYsN4npN8saWBorKyAj769Tw8nxZyudVbGVE9EHYUOFu6pvjlgmUuEItsyGSbvZ6hImJ" +
+            "Swv9an+1cwbvOY2tZXbhu8v4hWxGd8cefIEoKahJwhXFM7FsMIiFq7fPcaRu2OAWMNA9FNnM3521" +
+            "g9uxBDUqPLesHo5ouKtbFi1hqvcReQkRGrAdb0G/eK/qutdSW5g/rBUijLihxMgzQE0mXE+yYVwX" +
+            "e//ifxpzgh268jKlitC2TUgFCvn5cFkiaq6uXhaHspAZIAz/5phZjBa3BYrsX3eB28/oMSpMJ48u" +
+            "3nYQm1Bow/uRiHB8/lv1JU2K4RjUHXSAUVfwrT3oNs62soSKQbShnByh+js89JjHewsEwSxRaFpQ" +
+            "sxB5huv5/I3RxaE6bd2+PbrgIBolDwzw+3f9zNAe0+OcX+6cmbu85viK4JwkEHii2f4Ieu/wL8Qd" +
+            "ue8AERb4S0V9i8jjP9RuI4wXUfImcq/Me8uUASXWbeOCp0shqwt3PVOxnPkrliIXOvCsADrB6KqQ" +
+            "QW15z1zwmNMxnPhjZKhx6GwEz2eTDa4EgpB6S5zXvEgofyN+7tyA0oPMiQoHfs7oymtyfFmBx0sq" +
+            "oFiW8kAqDZuMvVTk00ePE+K3xE1FMo7LTNpndkTrK1pee8BLc/wyki+fjmFjjZ9O7VlKpKf7R5Fw" +
+            "HJX2JkxbyajV9dVL0TdQAixMrek5LwIVIxkobcKoJFgz4DBNMDEwDQYJYIZIAWUDBAIBBQAEIJ9s" +
+            "2toD2oneEaemuGcXDVSiYJHPLAlYHngfo0D3WdfzBBTYXvNVdLHjy4oYd2Y9HqukF07EUwICJxA=";
+
+    /** Trusts anything. These rows are about close-awareness, not PKI: a real
+     *  trust decision would only add a second way for them to fail. Supplying
+     *  an application trust manager is also what switches endpoint
+     *  identification off in JSSE, so no hostname check runs — which is what
+     *  keeps the rows from depending on how the host resolves `localhost`. */
+    static final TrustManager[] TRUST_ALL = {
+        new X509TrustManager() {
+            public void checkClientTrusted(X509Certificate[] chain, String authType) {}
+
+            public void checkServerTrusted(X509Certificate[] chain, String authType) {}
+
+            public X509Certificate[] getAcceptedIssuers() {
+                return new X509Certificate[0];
+            }
+        }
+    };
+
+    /** A connected, handshaken TLS pair on loopback. Both ends are real
+     *  `SSLSocket`s; on CratonVM the client end is what routes into
+     *  `s2_tls_read` / `s2_tls_write`. */
+    static final class TlsPair implements AutoCloseable {
+        final SSLServerSocket server;
+        final SSLSocket client;
+        volatile SSLSocket accepted;
+
+        TlsPair() throws Exception {
+            char[] pw = "probepass".toCharArray();
+            KeyStore ks = KeyStore.getInstance("PKCS12");
+            ks.load(new java.io.ByteArrayInputStream(
+                    Base64.getDecoder().decode(PROBE_P12_BASE64)), pw);
+            KeyManagerFactory kmf =
+                    KeyManagerFactory.getInstance(KeyManagerFactory.getDefaultAlgorithm());
+            kmf.init(ks, pw);
+
+            SSLContext serverCtx = SSLContext.getInstance("TLS");
+            serverCtx.init(kmf.getKeyManagers(), TRUST_ALL, null);
+            SSLContext clientCtx = SSLContext.getInstance("TLS");
+            clientCtx.init(null, TRUST_ALL, null);
+
+            server = (SSLServerSocket) serverCtx.getServerSocketFactory().createServerSocket();
+            server.bind(new InetSocketAddress(InetAddress.getLoopbackAddress(), 0));
+
+            CountDownLatch up = new CountDownLatch(1);
+            Thread acceptor = new Thread(() -> {
+                try {
+                    SSLSocket s = (SSLSocket) server.accept();
+                    s.startHandshake();
+                    accepted = s;
+                } catch (Throwable ignored) {
+                    // Reported by the constructor's own bounded wait below;
+                    // never allowed to take the process down.
+                } finally {
+                    up.countDown();
+                }
+            }, "asyncclose-tls-accept");
+            acceptor.setDaemon(true);
+            acceptor.start();
+
+            client = (SSLSocket) clientCtx.getSocketFactory()
+                    .createSocket(InetAddress.getLoopbackAddress(), server.getLocalPort());
+            client.startHandshake();
+            up.await(10, TimeUnit.SECONDS);
+            if (accepted == null) {
+                throw new IOException("TLS handshake did not complete on the server side");
+            }
+        }
+
+        @Override
+        public void close() {
+            closeQuietly(accepted);
+            closeQuietly(client);
+            closeQuietly(server);
+        }
+    }
+
+    /** The negative control for the TLS rows specifically. `selfTestNoPark`
+     *  proves the park guard can say `false` on a PLAIN socket; it says nothing
+     *  about TLS, where a read can fail to park for a reason unique to the
+     *  record layer — a whole record already sitting decrypted in the engine's
+     *  buffer. Without this row, `parked=true` on `tlsRead` would rest on a
+     *  check nobody has seen refuse a TLS read.
+     *
+     *  It PASSES by not parking. */
+    static void tlsSelfTestNoPark() throws Exception {
+        TlsPair p = new TlsPair();
+        junk(p);
+        p.accepted.getOutputStream().write(42);
+        p.accepted.getOutputStream().flush();
+        // Give the record time to arrive and be decrypted, so the read below
+        // genuinely cannot block.
+        Thread.sleep(300);
+        check("tlsSelfTestNoPark", "must-not-park", false,
+                row -> {
+                    InputStream in = p.client.getInputStream();
+                    row.entered = true;
+                    try {
+                        int n = in.read();
+                        recordReturn(row, n);
+                    } catch (Throwable t) {
+                        record(row, t);
+                    }
+                },
+                () -> p.client.close(),
+                p::close);
+    }
+
+    /** THE ANTI-VACUITY ROW FOR THE RECORD LAYER.
+     *
+     *  `tlsRead` returning an exception proves a wakeup; it does not prove the
+     *  stream was intact up to that point. This row proves the second thing,
+     *  which is the property W7-53 said a close-aware TLS loop must not break.
+     *  A multi-record payload is written by the peer and read back
+     *  byte-for-byte: every byte delivered must be the right byte at the right
+     *  offset. A loop that woke a reader mid-record and handed back a partial
+     *  buffer would corrupt the tail here even while `tlsRead` stayed green —
+     *  exactly the shape "removes a site from the census while leaving the
+     *  defect" describes.
+     *
+     *  It does not park, by design (the peer has already written everything),
+     *  so it is registered with `expectPark == false`. Its verdict is the
+     *  payload comparison, carried in `outcome`: `CORRUPT@<offset>` names the
+     *  first wrong byte. */
+    static void tlsReadIntegrity() throws Exception {
+        TlsPair p = new TlsPair();
+        junk(p);
+        // 200 KiB is many TLS records — the maximum plaintext fragment is
+        // 16 KiB — so a reader that abandoned at a record boundary truncates
+        // and one that abandoned INSIDE a record corrupts.
+        final int n = 200 * 1024;
+        byte[] payload = new byte[n];
+        for (int i = 0; i < n; i++) {
+            payload[i] = (byte) (i * 31 + 7);
+        }
+        Thread writer = new Thread(() -> {
+            try {
+                OutputStream out = p.accepted.getOutputStream();
+                out.write(payload);
+                out.flush();
+            } catch (Throwable ignored) {
+                // The reader's comparison is the verdict.
+            }
+        }, "asyncclose-tls-integrity-writer");
+        writer.setDaemon(true);
+        writer.start();
+        check("tlsReadIntegrity", "returned:" + n, false,
+                row -> {
+                    InputStream in = p.client.getInputStream();
+                    row.entered = true;
+                    try {
+                        byte[] got = new byte[n];
+                        int off = 0;
+                        while (off < n) {
+                            int r = in.read(got, off, n - off);
+                            if (r < 0) {
+                                break;
+                            }
+                            off += r;
+                        }
+                        for (int i = 0; i < off; i++) {
+                            if (got[i] != payload[i]) {
+                                row.outcome = "CORRUPT@" + i;
+                                return;
+                            }
+                        }
+                        recordReturn(row, off);
+                    } catch (Throwable t) {
+                        record(row, t);
+                    }
+                },
+                () -> p.client.close(),
+                p::close);
+    }
+
+    /** `SSLSocket.getInputStream().read()` parked with nothing on the wire,
+     *  then closed from another thread — `servlet.rs::s2_tls_read_direct`, or
+     *  `t27_tls.rs::rustls_stream_read` for a rustls-backed client socket. */
+    static void tlsRead() throws Exception {
+        TlsPair p = new TlsPair();
+        junk(p);
+        check("tlsRead", "SocketException|SSLException|IOException",
+                row -> {
+                    InputStream in = p.client.getInputStream();
+                    row.entered = true;
+                    try {
+                        int n = in.read();
+                        recordReturn(row, n);
+                    } catch (Throwable t) {
+                        record(row, t);
+                    }
+                },
+                () -> p.client.close(),
+                p::close);
+    }
+
+    /** `SSLSocket.getOutputStream().write()` into a peer that never reads —
+     *  `servlet.rs::s2_tls_write` / `t27_tls.rs::rustls_stream_write`. */
+    static void tlsWrite() throws Exception {
+        TlsPair p = new TlsPair();
+        junk(p);
+        byte[] payload = new byte[1 << 16];
+        // `CLOSE_BLOCKED` is on this row's `want` because it is what the
+        // ORACLE does, measured not assumed: on HotSpot 25.0.3 / Windows 11,
+        // 2026-08-12, `SSLSocket.close()` issued from another thread while a
+        // writer is parked inside `getOutputStream().write()` does not return —
+        // JSSE serialises `duplexCloseOutput()` behind the write. There is
+        // therefore NO reference behaviour in which a close wakes a parked TLS
+        // write, which is the measured reason W7-61 leaves
+        // `servlet.rs::s2_tls_write` and `t27_tls.rs::rustls_stream_write`
+        // alone: a close-aware write loop here would not be parity with
+        // HotSpot, it would be a behaviour HotSpot does not have.
+        //
+        // The row is still a real gate. It fails on exactly one reading —
+        // `TIMEOUT`, i.e. the close DID return and the writer is still parked.
+        // That is the genuine defect, and it is the reading a half-repair
+        // (unregister the stream, wake nobody) would produce.
+        check("tlsWrite", "CLOSE_BLOCKED|SocketException|SSLException|IOException|returned",
+                row -> {
+                    OutputStream out = p.client.getOutputStream();
+                    row.entered = true;
+                    try {
+                        for (int i = 0; i < 256; i++) {
+                            out.write(payload);
+                            out.flush();
+                        }
+                        recordReturn(row, 256L * payload.length);
+                    } catch (Throwable t) {
+                        record(row, t);
+                    }
+                },
+                () -> p.client.close(),
+                p::close);
+    }
+
     // -----------------------------------------------------------------------
 
     public static void main(String[] args) throws Exception {
@@ -787,6 +1172,13 @@ public class AsyncCloseProbe {
                 wrap("pipeWrite", AsyncCloseProbe::pipeWrite),
                 wrap("asyncAccept", AsyncCloseProbe::asyncAccept),
                 wrap("asyncRead", AsyncCloseProbe::asyncRead),
+                // TLS rows (W7-61). `tlsSelfTestNoPark` first, for the same
+                // reason `selfTestNoPark` is first: if the TLS park guard is
+                // broken, no TLS row below it means anything.
+                wrap("tlsSelfTestNoPark", AsyncCloseProbe::tlsSelfTestNoPark),
+                wrap("tlsReadIntegrity", AsyncCloseProbe::tlsReadIntegrity),
+                wrap("tlsRead", AsyncCloseProbe::tlsRead),
+                wrap("tlsWrite", AsyncCloseProbe::tlsWrite),
         }) {
             r.run();
         }
